--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css",
-    "watch:css": "postcss src/styles/tailwind.css -o src/styles/app.css -w"
+    "build:css": "postcss src/core/styles/tailwind.css -o src/styles/app.css",
+    "watch:css": "postcss src/core/styles/tailwind.css -o src/styles/app.css -w"
   },
   "eslintConfig": {
     "extends": "react-app"
