--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.0",
     "husky": "^4.2.5",
+    "idb": "^5.0.4",
     "install": "^0.13.0",
     "lint-staged": "^10.2.2",
     "node-sass": "^4.14.1",
