--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.155",
     "@types/node": "^12.12.39",
     "@types/react": "^16.9.35",
     "@types/react-autosuggest": "^9.3.14",
@@ -18,8 +19,10 @@
     "autoprefixer": "^9.8.0",
     "husky": "^4.2.5",
     "idb": "^5.0.4",
+    "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
     "lint-staged": "^10.2.2",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "npm": "^6.14.5",
     "postcss-cli": "^7.1.1",
