--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "install": "^0.13.0",
     "lint-staged": "^10.2.2",
     "lodash": "^4.17.15",
-    "node-sass": "^4.14.1",
     "npm": "^6.14.5",
-    "postcss-cli": "^7.1.1",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
@@ -58,7 +57,8 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.5"
+    "@types/reach__router": "^1.3.5",
+    "sass": "^1.49.9"
   },
   "husky": {
     "hooks": {
